--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,11 @@
 
   <body id="level1">
 
-    <center> 
-      <img src="{{url_for('static', filename='DP.png')}}" style="margin-top: 20px; width: 350px; height: 70px">
+    <center>
+	<h4>Level one</h4>
+	<br/>
+      <img src="{{url_for('static', filename='DP.png')}}" 
+	style="margin-top: 20px; width: 250px; height: 50px">
       <br>
         <div style="margin-top: 20px">
           <form action="/xss-game/python/index" method="GET" name="search">
