--- a/solution/index.html
+++ b/solution/index.html
@@ -36,7 +36,7 @@
                   <input style="font-size: 13px" id="query" class="form-control" name="query" type="text" required onfocus="this.value=''"/>
                 </div>
                 <div class="col-md-3 col-sm-6 mt-3 offset-md-2 offset-sm-3">
-                            <button style="cursor: pointer;" class="btn btn-primary btn-block btn-sm" type="submit">Search</button>
+                  <button style="cursor: pointer;margin-top: -15px;" class="btn btn-primary btn-block btn-sm" type="submit">Search</button>
                 </div>
               </div>
             </form>
